--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.75.7",
     "@types/uuid": "^10.0.0",
     "chart.js": "^4.4.9",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "pg": "^8.15.6",
