--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@types/uuid": "^10.0.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "i18next": "^25.1.2",
+    "i18next-browser-languagedetector": "^8.1.0",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "pg": "^8.15.6",
@@ -26,6 +28,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-i18next": "^15.5.1",
     "react-icons": "^5.5.0",
     "uuid": "^11.1.0"
   },
